# P2L2d

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml
comfyui/: __init__.py  client.py  exceptions.py  test_connection.py
comfyui/workflows/: README.md  face_inpaint.json  hair_segment.json  style_transfer_anime.json
docs/: cubism-editor-learning-guide.md  pipeline-overview.md
docs/integration/: muse-bridge-mlp-integration.md
docs/research/: 2026-04-03-comfyui-claude-code-integration.md  2026-04-03-cubism-editor-learning-resources.md  2026-04-03-live2d-official-samples-vs-haimeng.md  2026-04-03-realtime-portrait-animation-vtubing.md  2026-04-04-comfyui-programmatic-driving-libs.md  2026-04-05-anime-landmark-eye-tracking-failure.md  2026-04-05-comfyui-workflows-for-training-data.md  2026-04-05-full-pipeline-plan.md  2026-04-05-headless-live2d-rendering.md  2026-04-05-liveportrait-deep-dive.md  2026-04-05-liveportrait-phase1-results.md  2026-04-05-liveportrait-phase3-results.md  2026-04-05-liveportrait-phase4-results.md  2026-04-05-mlp-parameter-strategy.md  2026-04-05-template-rig-architecture.md  2026-04-06-atlas-region-verification-lessons.md  (+7 more)
manifests/: akari_drawables_raw.json  hiyori.toml  hiyori_atlas.toml  hiyori_drawables_raw.json  wanko_atlas.toml  wanko_drawables_raw.json
mlp/: curves.py  infer.py  model.py  train_verb_mlp.py
pipeline/: atlas_config.py  color_apply.py  color_extract.py  exceptions.py  extract_uvs.py  face_align.py  face_inpaint.py  hair_segment.py  package.py  run.py  style_transfer.py  template_palette.py  texture_gen.py  texture_swap.py  uv_remap.py  validate.py
rig/: config.py  headless_gl.py  manifest.py  render.py
runtime/: obs_bridge.py  param_bridge.py  runner.py
scripts/: analyze_uv_layout.py  analyze_uv_overlap.py  debug_pipeline_steps.py  generate_template_landmarks.py  prototype_color_recolor.py  verify_atlas_detail.py  verify_atlas_regions.py  verify_individual.py
templates/: __init__.py  loader.py
tests/: test_end_to_end.py
(+63 files in other folders)
