[project]
name = "portrait-to-live2d"
version = "0.1.0"
description = "Portrait image → animatable Live2D model pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mediapipe>=0.10",
    "numpy>=1.26",
    "obsws-python>=1.7",
    "torch>=2.3",
    "websockets>=13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
