[project]
name = "portrait-to-live2d"
version = "0.1.0"
description = "Portrait image → animatable Live2D model pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mediapipe>=0.10",
    "numpy>=1.26",
    "obsws-python>=1.7",
    "torch>=2.3",
    "websockets>=13.0",
    # LivePortrait runtime deps (vendored at third_party/LivePortrait)
    "onnx>=1.16",
    "onnxruntime-gpu>=1.18",
    "opencv-python>=4.10",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "scikit-image>=0.24",
    "tyro>=0.8",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "albumentations>=1.4",
    "pykalman>=0.9",
    "transformers>=4.38",
    "rich>=13.7",
    "tqdm>=4.66",
    "pillow>=10.2",
    "requests>=2.31",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
